# brltty

./: .gitignore  .gitmodules  1q  Driver.Makefile  LICENSE-LGPL.url  Makefile  Makefile.in  README  README.library  README.md  README.txt  a  absdeps.mk  aclocal.m4  add-files  adlib.c  adlib.h  apitest.sh  appveyor.yml  archives.mk  attrib.tbl  autogen  autogen.sh  b  beeps-songs.h  beeps.c  beeps.h  begin.sh  bindings.mk  braille.mk  brl.h  brl_dl.c  brl_driver.h  brl_dynamic.c  brl_lib.h  brl_load.c  brl_static.c  brltest  brltest.c  brltty  (+167 more)
Alva/: Makefile  README  brlconf.h  brlmain.cc  brlttyhlp.txt  brlttyhlp0.txt  brlttyhlp1.txt  brlttyhlp2.txt  brlttyhlp3.txt  brlttyhlp4.txt  brlttyhlp5.txt  brlttyhlp6.txt  speech.c  speech.h
Alva_ABT3/: README  brl.c  brlconf.h  brlttyhelp.txt  brlttyhlp0.txt  brlttyhlp1.txt  brlttyhlp3.txt  brlttyhlp4.txt
Android/: .gitignore  Makefile  Makefile.in  README  STRINGS  TODO  TRANSLATORS  common.mk  mk
Archives/: .gitignore  Makefile  make-archives
Bootdisks/: README  README.Debian  README.RedHat  README.RedHat.cd  README.RedHat.fd  bp2cf  mkbd  mkinit  mkrhiso  rhmkboot  rhmkiso
BrailleLite/: Makefile  Makefile.rej  README  bindings.h  brl.c  brlconf.h  brltty_genhelp.txt  brlttyhelp.txt  speech.c  speech.h
BrailleNote/: .keys.*  Makefile  README  a  brl.c  brlconf.h  brlttyhlp.cmds.txt  brlttyhlp.keys.txt
BrailleTables/: .gitignore  Makefile  Makefile.in  README  README-ATB  README-CTB  README-TTB  README.DA  README.NABCC  README.RU  TABLEFORMAT  a  ar.ttb  as.ttb  attrib.atb  attrib.tbl  attributes.atb  attributes.tbl  awa.ttb  bengali.tti  bg.ttb  bh.ttb  bn.ttb  box.tti  boxes.tti  bra.ttb  brf.ttb  common.tti  convtable.c  countries.cti  cs.ttb  cy.ttb  cz.ttb  da-1252.ttb  da-lt.ttb  da.ttb  de-basis.ctb  de-chess.tti  de-kurzschrift.ctb  de-vollschrift.ctb  (+142 more)
CombiBraille/: Makefile  README  brl.c  brlconf.h  brlttyhelp.txt  cmdtrans.h  speech.c  speech.h  tables.h
ContractionTables/: README  README.cti  allchars.cti  big5.ctb  compress.ctb  cont.compress.tbl  cont.usenglish.tbl  countries.cti  en-ueb-g2.ctb  en-uebc-g2.ctb  en-us-g2.ctb  fr-abrege.ctb  fr-integral.ctb  gb2312.ctb  opcodes.cti  uebc-g2.ctb  zh-tw-big5.ctb  zh-tw-gb2312.ctb  zh-tw-polyphone.cti  zh-tw-ucb.ctb  zh-tw-utf8.ctb  zh-tw.ctb  zh_TW-ucb.ctb
DOCS/: ChangeLog  FAQ  FAQ.txt  Makefile  Manual-ger.sgml  Manual-ger.txt  Manual.dvi  Manual.html  Manual.sgml  Manual.txt  TODO  brltty.conf  brltty.lsm  en.dict  manual-1.html  manual-2.html  manual-3.html  manual-4.html
DOS/: .gitignore  dosinstall  mk  mkdosarc  mkdostools  mktools
Dave/: canute-config  canute-prepare  gitconfig  lynxrc  notes  pi.env  vimrc
Document/: .gitignore  Makefile  canute-controller.rst  docutils.conf  index.html  make-command-help  software.rst
Documents/: .gitignore  BUGS  BrlAPI.sgml  BrlAPIref.doxy.in  CONTRIBUTORS  ChangeLog  FAQ.html  FAQ.txt  HISTORY  Makefile  Makefile.in  Manual.sgml  Manual.txt  README  README-Android  README.Android  README.AttributesTables  README.Bluetooth  README.BrailleDots  README.CommandReference  README.ContractionTables  README.Customize  README.DOS  README.Devices  README.Fuzzing  README.Gnopernicus  README.Introduction  README.KeyTables  README.Linux  README.MSDOS  README.OpenBSD  README.Polling  README.PrivacyPolicy  README.Profiles  README.Seika  README.Stow  README.Systemd  README.TextTables  README.Upstart  README.Windows  (+40 more)
Download/: canute-controller.tar.bz2  canute-controller.tar.xz  canute-install  index.html
Dracut/: Makefile.in  README  brltty-cleanup.sh  brltty-parse-options.sh  brltty-start.sh  brltty-stop.sh  dracut.conf  module-setup.sh  parse-brltty-opts.sh
Drivers/: braille.c
EcoBraille/: LEEME  Makefile  README  brl.c  brlconf.h  brlttyhlp.es  brlttyhlp.txt
EuroBraille/: Makefile  README  brl.c  brlconf.h  brlttyhlp.txt
ExternalSpeech/: Makefile  README  TODO  speech.c  speech.h
Festival/: Makefile  speech.c  speech.h
GenericSay/: Makefile  README  speech.c  speech.h
Generic_say/: Makefile  README  speech.c
Gnopernicus/: README  patch  ttybrl.c
HandyTech/: Makefile  README  brlconf.h  brlmain.cc  brlttyhlp.txt  brlttyhlp0.txt  brlttyhlp2.txt
Headers/: addresses.h  alert.h  api_types.h  ascii.h  async.h  async_alarm.h  async_event.h  async_handle.h  async_io.h  async_signal.h  async_task.h  async_types.h  async_types_alarm.h  async_types_event.h  async_types_handle.h  async_types_io.h  async_types_task.h  async_types_wait.h  async_wait.h  atb.h  auth.h  beep.h  bell.h  bitfield.h  bitmask.h  brl_base.h  brl_cmds.h  brl_custom.h  brl_dots.h  brl_driver.h  brl_types.h  brl_utils.h  charset.h  cldr.h  clipboard.h  cmd.h  cmd_enqueue.h  cmd_types.h  cmdargs.h  cmdbase.h  (+139 more)
Hotplug/: brltty  brltty-libusb-1.0.inf  brltty.inf  brltty.upstart  brltty.usermap  systemd.service  udev.rules  upstart.job
Internationalization/: .gitignore  Makefile.in  de.po  fr.po
LibLouis/: Makefile  Makefile.in  packages
LogText/: Makefile  brl.c  brlconf.h  input.h  output.h  output.oslash.h
MDV/: Makefile  README  brl.c  brlconf.h  brlttyhlp.txt
Make/: add-files  configure-brltty  make-prologue.sh  symlink-bindings  symlink-current
Messages/: .gitignore  Makefile.in  TRANSLATORS  ar.po  brltty.pot  de.po  fr.po  it.po  ka.po  ru.po  sv.po  tr.po  uk.po  zh.po
MiniBraille/: Makefile  README  brl.c  brlconf.h  brlttyhlp.txt  minibraille.h
MultiBraille/: Makefile  README  brl.c  brlconf.h  brlttyhelp.txt  speech.c  speech.h  tables.h
NoSpeech/: Makefile  speech.c  speech.h
Notes/: README  issues.txt
Papenmeier/:  EL 2D-40   EL 2D-66   EL-80   IB 80 CR Soft  Makefile  README  README.old  brl-cfg.h  brl.c  brlconf.h  brlttydev.hlp  brlttyhelp.txt  brlttyhelp.us.txt  cmd.awk  config.y  dump-codes.c  help.ger.txt  help.us.txt  hlp.awk  read_config.c  read_config.y  serial.c  simulate.c  test.1.in  test.2.in
Patches/: msdos.patch  screen-3.7.2.patch  screen-3.7.2.txt  screen-3.9.11.patch  screen-3.9.11.txt  screen-4.0.1.patch  screen-4.0.1.txt  screen-4.2.1.patch  screen-pty.txt  ttybrl.c
TSI/: Makefile  (+8 more)
(+3995 files in other folders)
